# qtcodeedit

./: README.md  example.py  hello.py  pyproject.toml  qtcodeedit.py  test_codeedit.py  tox.ini
.github/workflows/: python-publish.yml
